Fix site heading alignment on small viewports

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -114,6 +114,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 48em) {
   .masthead-title {
+    padding-right: 40px;
     text-align: center;
   }
   .masthead-title small {
